--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "federate-yukon",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -12,8 +13,6 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "ws": "^8.18.0"
   },
   "devDependencies": {
